--- a/backend/package.json
+++ b/backend/package.json
@@ -10,10 +10,10 @@
     "body-parser": "~1.18.2",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
-    "express": "~4.15.5",
+    "express": "^4.16.4",
     "express-session": "^1.15.6",
     "jade": "~1.11.0",
-    "morgan": "~1.9.0",
+    "morgan": "^1.9.1",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "password-hash-and-salt": "^0.1.4",
@@ -22,6 +22,6 @@
     "sweetalert": "^2.1.0"
   },
   "devDependencies": {
-    "nodemon": "^1.14.12"
+    "nodemon": "^1.18.10"
   }
 }
